REST / Add forward paramenter to Handler.handle()